--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     /* z-index: 5; */
 }
 body{
-    min-height: 100vh;
+    min-height: 100%;
     /* background: #6096ba; */
     /* background: #6297a5; */
 }
@@ -18,10 +18,6 @@ body{
 }
 h1{
     font-family: poppins;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     font-size: 50px;
     font-weight: bold;
     color: #ffff;
